# alcatraz

./: README.md
.github/workflows/: ci.yml
contracts/cw20-pot/: .gitignore  Cargo.toml
contracts/cw20-pot/schema/: cw20-pot.json
contracts/cw20-pot/src/: contract.rs
contracts/cw20-token/: .gitignore  Cargo.toml
devtools/: build_test_all.sh  chain.sh  check_all.sh  set_versions.sh
frontend/: package-lock.json  package.json
frontend/pages/: _app.tsx  index.tsx
