[package]
name = "cw20-token"
version = "0.1.0"
authors = ["André Sardo <afsardo@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw-utils = "0.16.0"
cw2 = { version = "0.16.0" }
cw20 = { version = "0.16.0" }
cw-storage-plus = "0.16.0"
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw-multi-test = "0.16.0"